UtahLiveDataTest/src/objects/WBSTaskSchedule__c.object
<CustomObject>
    <description>[Business] Used to Store the Schedule of of Task in WBS Grid</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>WBS Task Schedule</relationshipLabel>
        <relationshipName>WBS_Task_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Award to which WBS Task is associated</description>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>WBS Task Schedule</relationshipLabel>
        <relationshipName>WBS_Task_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentWBSTaskSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent WBS Task Schedule</label>
        <referenceTo>WBSTaskSchedule__c</referenceTo>
        <relationshipLabel>WBS Task Schedule</relationshipLabel>
        <relationshipName>WBS_Task_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>WBS Task Schedule</relationshipLabel>
        <relationshipName>WBS_Task_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgressIndicator__c</fullName>
        <label>Progress Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskDuration__c</fullName>
        <label>Task Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WBSNumber__c</fullName>
        <label>WBS #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>WBS Task Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WBSTaskSchedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WBS Task Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Progress_Indicator_Value</fullName>
        <active>true</active>
        <errorConditionFormula>ProgressIndicator__c&lt;0</errorConditionFormula>
        <errorMessage>Please do not enter a negative value</errorMessage>
    </validationRules>
</CustomObject>